Added TINYMCE Api key

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL="postgres://moonup:Njn0gEPvHulk4WUBEX9vJSm14imxdW7K@dpg-cos4t8a1hbls73fe8ufg-a.frankfurt-postgres.render.com/notepad"
+NEXT_PUBLIC_TINYMCE="2feckzuhrnyhzkf01jsgw1fbg53mt8pyohky9wnof4kzcnhn"
